--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "gapi-script": "^1.2.0",
     "gocardless-nodejs": "2.2.0",
     "google-libphonenumber": "3.2.22",
+    "googleapis": "88.2.0",
     "graphql": "15.5.3",
     "graphql-middleware": "6.1.6",
     "graphql-scalars": "1.10.1",
@@ -132,8 +133,8 @@
     "i18next-browser-languagedetector": "6.1.2",
     "i18next-xhr-backend": "3.2.2",
     "inflected": "2.1.0",
-    "jsonwebtoken": "8.5.1",
     "js-base64": "3.7.0",
+    "jsonwebtoken": "8.5.1",
     "less": "3.13.1",
     "less-loader": "7.3.0",
     "less-vars-to-js": "1.3.0",
