--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -71,7 +71,7 @@
     },
     {
       "source": "'/test-form/:form_id/:client_id",
-      "destination": "/test-form/[form_id]/[client_id]"
+      "destination": "/test-form/[form_id]/[client_id]?form_id=:form_id&client_id=:client_id"
     }
   ]
 }
