--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -70,7 +70,7 @@
       "destination": "/clients/finance/statement/[id]?id=:id"
     },
     {
-      "source": "'/test-form/:form_id/:client_id",
+      "source": "/test-form/:form_id/:client_id",
       "destination": "/test-form/[form_id]/[client_id]?form_id=:form_id&client_id=:client_id"
     }
   ]
