Removing hasura diff

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -50,7 +50,6 @@ pipelines:
                 - DANGER_BITBUCKETCLOUD_OAUTH_KEY="${BITBUCKET_CLIENT_ID}" DANGER_BITBUCKETCLOUD_OAUTH_SECRET="${BITBUCKET_CLIENT_SECRET}" yarn danger ci --no-publish-check
                 - yarn graphql-inspector diff 'git:origin/master:./hasura/schema.graphql' 'hasura/schema.graphql'
 
-
           - step:
               name: lint
               script:
@@ -70,7 +69,7 @@ pipelines:
               services:
                 - docker
               script:
-#                - while true; do ps -aux && sleep 30; done &
+                #                - while true; do ps -aux && sleep 30; done &
                 - |
                   echo "Testing Hasura database is consistent with schema.graphql..."
                   echo "============================================================"
@@ -103,7 +102,7 @@ pipelines:
                   HASURA_GRAPHQL_ENDPOINT="http://localhost:8080" yarn hasura:export
                 - |
                   echo "Ensuring everything is identical..."
-                  git diff --exit-code --no-ext-diff -p || (git status && exit 1)
+                # git diff --exit-code --no-ext-diff -p || (git status && exit 1)
                 - |
                   echo "Waiting for MySQL to boot..."
                   docker-compose -f tools/pabau1/docker-compose.ci.yml up &
@@ -115,7 +114,6 @@ pipelines:
                 - |
                   echo "Performing load testing..."
                   yarn load-testing
-
 
           - step:
               name: build
@@ -231,7 +229,6 @@ pipelines:
                               --header 'Content-Type: application/json' \
                               --data-binary @-
 
-
   branches:
     master:
       - step:
@@ -303,7 +300,6 @@ pipelines:
             - export PACKAGE_JSON_VERSION=$(jq -r .version < package.json)
 
       - parallel:
-
           - step:
               name: integration tests
               size: 2x
@@ -343,7 +339,7 @@ pipelines:
                   HASURA_GRAPHQL_ENDPOINT="http://localhost:8080" yarn hasura:export
                 - |
                   echo "Ensuring everything is identical..."
-                  git diff --exit-code --no-ext-diff -p || (git status && exit 1)
+                #  git diff --exit-code --no-ext-diff -p || (git status && exit 1)
                 - |
                   echo "Waiting for MySQL to boot..."
                   docker-compose -f tools/pabau1/docker-compose.ci.yml up &
@@ -355,7 +351,6 @@ pipelines:
                 - |
                   echo "Performing load testing..."
                   yarn load-testing
-
 
           - step:
               name: build
