--- a/package.json
+++ b/package.json
@@ -190,6 +190,7 @@
     "react-signature-canvas": "1.0.3",
     "react-sortable-hoc": "2.0.0",
     "react-string-replace": "0.4.4",
+    "react-swipeable": "^6.2.0",
     "react-use": "17.2.4",
     "react-vertical-timeline-component": "3.3.3",
     "react-zoom-pan-pinch": "2.1.3",
