Boost pipeline, verbose & progress tracking upgrade

--- a/apps/bridge-api/tsconfig.json
+++ b/apps/bridge-api/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "files": [],
   "include": [],
+  "memoryLimit": 5120,
   "compilerOptions": {
     "resolveJsonModule": true
   },
