--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -266,14 +266,14 @@ pipelines:
                 #                - while true; do ps -aux && sleep 30; done &
                 - yarn affected:lint --base=HEAD~1
 
-          - step:
-              name: unit tests
-              size: 8x
-              runs-on:
-                - 'self.hosted'
-              script:
-                #                - while true; do ps -aux && sleep 30; done &
-                - yarn affected:test --base=HEAD~1
+          # - step:
+          #     name: unit tests
+          #     size: 8x
+          #     runs-on:
+          #       - 'self.hosted'
+          #     script:
+          #       #                - while true; do ps -aux && sleep 30; done &
+          #       - yarn affected:test --base=HEAD~1
 
           - step:
               name: e2e
