--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -285,59 +285,59 @@ pipelines:
                 - apt update -y && apt install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
                 - yarn cypress install || true
                 - yarn affected:e2e --base=HEAD~1 || true
-          - step:
-              name: integration tests
-              size: 8x
-              runs-on:
-                - 'self.hosted'
-              services:
-                - docker
-              script:
-                #                - while true; do ps -aux && sleep 30; done &
-                - |
-                  echo "Testing Hasura database is consistent with schema.graphql..."
-                  echo "============================================================"
-                  echo ""
-                  echo "Installing docker-compose..."
-                  curl -L https://github.com/docker/compose/releases/download/1.29.2/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
-                  chmod +x ~/docker-compose
-                  mv ~/docker-compose /usr/local/bin/docker-compose
-                - yarn bridge:start2 &
-                - |
-                  echo "Waiting for bridge-api to boot..."
-                  yarn wait-on -t 160000 -w 20000 http-get://localhost:4000
-                - |
-                  echo "Waiting for postgres to boot..."
-                  docker-compose -f hasura/docker-compose.ci.yml up -d postgres && yarn wait-on -t 60000 -d 12000 tcp:127.0.0.1:5432 || docker-compose -f hasura/docker-compose.ci.yml logs postgres
-                - |
-                  echo "Waiting for Hasura to boot..."
-                  docker-compose -f hasura/docker-compose.ci.yml up graphql-engine &
-                  echo "Launched"
-                  yarn wait-on -t 90000 -d 50000 http-get://127.0.0.1:8080/console || echo "Still waiting for boot..."
-                  yarn wait-on -t 60000 -d 10000 http-get://127.0.0.1:8080/console || echo "Still waiting for boot..."
-                  yarn wait-on -t 60000 -d 10000 http-get://127.0.0.1:8080/console || echo "Still waiting for boot..."
-                  yarn wait-on -t 60000 -d 10000 http-get://127.0.0.1:8080/console || (docker-compose -f hasura/docker-compose.ci.yml logs graphql-engine; exit 1)
-                  HASURA_GRAPHQL_ENDPOINT="http://localhost:8080" yarn hasura:wait
-                - |
-                  echo "Checking Metadata is consistent so far..."
-                  HASURA_GRAPHQL_ENDPOINT="http://localhost:8080" yarn hasura:cli metadata inconsistency status
-                - |
-                  echo "Exporting Hasura metadata..."
-                  HASURA_GRAPHQL_ENDPOINT="http://localhost:8080" yarn hasura:export
-                - |
-                  echo "Ensuring everything is identical..."
-                #  git diff --exit-code --no-ext-diff -p || (git status && exit 1)
-                - |
-                  echo "Waiting for MySQL to boot..."
-                  docker-compose -f tools/pabau1/docker-compose.ci.yml up &
-                  echo "Launched"
-                  yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || echo "Still waiting for boot..."
-                  yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || echo "Still waiting for boot..."
-                  yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || echo "Still waiting for boot..."
-                  yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || (docker-compose -f tools/pabau1/docker-compose.ci.yml logs; exit 1)
-                #- |
-                #  echo "Performing load testing..."
-                # yarn load-testing
+#          - step:
+#              name: integration tests
+#              size: 8x
+#              runs-on:
+#                - 'self.hosted'
+#              services:
+#                - docker
+#              script:
+#                #                - while true; do ps -aux && sleep 30; done &
+#                - |
+#                  echo "Testing Hasura database is consistent with schema.graphql..."
+#                  echo "============================================================"
+#                  echo ""
+#                  echo "Installing docker-compose..."
+#                  curl -L https://github.com/docker/compose/releases/download/1.29.2/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
+#                  chmod +x ~/docker-compose
+#                  mv ~/docker-compose /usr/local/bin/docker-compose
+#                - yarn bridge:start2 &
+#                - |
+#                  echo "Waiting for bridge-api to boot..."
+#                  yarn wait-on -t 160000 -w 20000 http-get://localhost:4000
+#                - |
+#                  echo "Waiting for postgres to boot..."
+#                  docker-compose -f hasura/docker-compose.ci.yml up -d postgres && yarn wait-on -t 60000 -d 12000 tcp:127.0.0.1:5432 || docker-compose -f hasura/docker-compose.ci.yml logs postgres
+#                - |
+#                  echo "Waiting for Hasura to boot..."
+#                  docker-compose -f hasura/docker-compose.ci.yml up graphql-engine &
+#                  echo "Launched"
+#                  yarn wait-on -t 90000 -d 50000 http-get://127.0.0.1:8080/console || echo "Still waiting for boot..."
+#                  yarn wait-on -t 60000 -d 10000 http-get://127.0.0.1:8080/console || echo "Still waiting for boot..."
+#                  yarn wait-on -t 60000 -d 10000 http-get://127.0.0.1:8080/console || echo "Still waiting for boot..."
+#                  yarn wait-on -t 60000 -d 10000 http-get://127.0.0.1:8080/console || (docker-compose -f hasura/docker-compose.ci.yml logs graphql-engine; exit 1)
+#                  HASURA_GRAPHQL_ENDPOINT="http://localhost:8080" yarn hasura:wait
+#                - |
+#                  echo "Checking Metadata is consistent so far..."
+#                  HASURA_GRAPHQL_ENDPOINT="http://localhost:8080" yarn hasura:cli metadata inconsistency status
+#                - |
+#                  echo "Exporting Hasura metadata..."
+#                  HASURA_GRAPHQL_ENDPOINT="http://localhost:8080" yarn hasura:export
+#                - |
+#                  echo "Ensuring everything is identical..."
+#                #  git diff --exit-code --no-ext-diff -p || (git status && exit 1)
+#                - |
+#                  echo "Waiting for MySQL to boot..."
+#                  docker-compose -f tools/pabau1/docker-compose.ci.yml up &
+#                  echo "Launched"
+#                  yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || echo "Still waiting for boot..."
+#                  yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || echo "Still waiting for boot..."
+#                  yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || echo "Still waiting for boot..."
+#                  yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || (docker-compose -f tools/pabau1/docker-compose.ci.yml logs; exit 1)
+#                #- |
+#                #  echo "Performing load testing..."
+#                # yarn load-testing
       - step:
           name: bump version
           max-time: 5
