AWS Deploy step 1

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,14 +11,16 @@ definitions:
     cypress: '/root/.cache/Cypress'
   services:
     docker:
-      memory: 7168
+      memory: 16384
 
 pipelines:
   pull-requests:
     '**':
       - step:
           name: yarn audit
-          size: 2x
+          size: 4x
+          runs-on:
+                - 'self.hosted'
           caches:
             - nodemodules
             - yarncustom
@@ -34,7 +36,9 @@ pipelines:
       - parallel:
           - step:
               name: misc checks
-              size: 1x
+              size: 4x
+              runs-on:
+                - 'self.hosted'
               script:
                 #                - while true; do ps -aux && sleep 30; done &
                 - if git ls-files | git check-ignore --no-index --stdin; then echo "The above files are committed, but yet they are also in .gitignore. Don't mix."; fi
@@ -52,20 +56,26 @@ pipelines:
 
           - step:
               name: lint
+              runs-on:
+                - 'self.hosted'
               script:
                 #                - while true; do ps -aux && sleep 30; done &
                 - yarn affected:lint --base=origin/master
 
           - step:
               name: unit tests
-              size: 2x
+              size: 4x
+              runs-on:
+                - 'self.hosted'
               script:
                 #                - while true; do ps -aux && sleep 30; done &
                 - yarn affected:test --base=origin/master
 
           - step:
               name: integration tests
-              size: 2x
+              size: 4x
+              runs-on:
+                - 'self.hosted'
               services:
                 - docker
               script:
@@ -111,12 +121,14 @@ pipelines:
                   yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || echo "Still waiting for boot..."
                   yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || echo "Still waiting for boot..."
                   yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || (docker-compose -f tools/pabau1/docker-compose.ci.yml logs; exit 1)
-
-                #  echo "Performing load testing..."
-                #  yarn load-testing
+                - |
+                  echo "Performing load testing..."
+                  yarn load-testing
           - step:
               name: e2e
-              size: 2x
+              size: 4x
+              runs-on:
+                - 'self.hosted'
               caches:
                 - cypress
               script:
@@ -127,7 +139,9 @@ pipelines:
       - step:
           name: build
           max-time: 80
-          size: 2x
+          size: 4x
+          runs-on:
+            - 'self.hosted'
           script:
             #                - while true; do ps -aux && sleep 30; done &
             - NEXT_PUBLIC_GRAPHQL_ENDPOINT='https://api-v2-staging.pabau.com/v1/graphql' NEXT_PUBLIC_WS_ENDPOINT='wss://api-v2-staging.pabau.com/v1/graphql' yarn affected:export --base=origin/master --prod
@@ -136,7 +150,9 @@ pipelines:
       - parallel:
           - step:
               name: deploy dockers
-              size: 2x
+              size: 4x
+              runs-on:
+                - 'self.hosted'
               services:
                 - docker
               script:
@@ -150,6 +166,8 @@ pipelines:
           - step:
               name: deploy previews
               image: node
+              runs-on:
+                - 'self.hosted'
               max-time: 20
               script:
                 #                - while true; do ps -aux && sleep 30; done &
@@ -194,6 +212,8 @@ pipelines:
       - step:
           name: announce to slack
           max-time: 25
+          runs-on:
+            - 'self.hosted'
           script:
             #                - while true; do ps -aux && sleep 30; done &
             - cat dist/bot_message2.txt || true
@@ -230,7 +250,9 @@ pipelines:
     master:
       - step:
           name: yarn audit
-          size: 2x
+          size: 4x
+          runs-on:
+            - 'self.hosted'
           caches:
             - node
           script:
@@ -245,7 +267,9 @@ pipelines:
       - parallel:
           - step:
               name: misc checks
-              size: 2x
+              size: 4x
+              runs-on:
+                - 'self.hosted'
               script:
                 #                - while true; do ps -aux && sleep 30; done &
                 - if git ls-files | git check-ignore --no-index --stdin; then echo "The above files are committed, but yet they are also in .gitignore. Don't mix."; fi
@@ -262,6 +286,8 @@ pipelines:
 
           - step:
               name: lint
+              runs-on:
+                - 'self.hosted'
               script:
                 #                - while true; do ps -aux && sleep 30; done &
                 - yarn affected:lint --base=HEAD~1
@@ -285,62 +311,64 @@ pipelines:
                 - apt update -y && apt install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
                 - yarn cypress install || true
                 - yarn affected:e2e --base=HEAD~1 || true
-#          - step:
-#              name: integration tests
-#              size: 8x
-#              runs-on:
-#                - 'self.hosted'
-#              services:
-#                - docker
-#              script:
-#                #                - while true; do ps -aux && sleep 30; done &
-#                - |
-#                  echo "Testing Hasura database is consistent with schema.graphql..."
-#                  echo "============================================================"
-#                  echo ""
-#                  echo "Installing docker-compose..."
-#                  curl -L https://github.com/docker/compose/releases/download/1.29.2/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
-#                  chmod +x ~/docker-compose
-#                  mv ~/docker-compose /usr/local/bin/docker-compose
-#                - yarn bridge:start2 &
-#                - |
-#                  echo "Waiting for bridge-api to boot..."
-#                  yarn wait-on -t 160000 -w 20000 http-get://localhost:4000
-#                - |
-#                  echo "Waiting for postgres to boot..."
-#                  docker-compose -f hasura/docker-compose.ci.yml up -d postgres && yarn wait-on -t 60000 -d 12000 tcp:127.0.0.1:5432 || docker-compose -f hasura/docker-compose.ci.yml logs postgres
-#                - |
-#                  echo "Waiting for Hasura to boot..."
-#                  docker-compose -f hasura/docker-compose.ci.yml up graphql-engine &
-#                  echo "Launched"
-#                  yarn wait-on -t 90000 -d 50000 http-get://127.0.0.1:8080/console || echo "Still waiting for boot..."
-#                  yarn wait-on -t 60000 -d 10000 http-get://127.0.0.1:8080/console || echo "Still waiting for boot..."
-#                  yarn wait-on -t 60000 -d 10000 http-get://127.0.0.1:8080/console || echo "Still waiting for boot..."
-#                  yarn wait-on -t 60000 -d 10000 http-get://127.0.0.1:8080/console || (docker-compose -f hasura/docker-compose.ci.yml logs graphql-engine; exit 1)
-#                  HASURA_GRAPHQL_ENDPOINT="http://localhost:8080" yarn hasura:wait
-#                - |
-#                  echo "Checking Metadata is consistent so far..."
-#                  HASURA_GRAPHQL_ENDPOINT="http://localhost:8080" yarn hasura:cli metadata inconsistency status
-#                - |
-#                  echo "Exporting Hasura metadata..."
-#                  HASURA_GRAPHQL_ENDPOINT="http://localhost:8080" yarn hasura:export
-#                - |
-#                  echo "Ensuring everything is identical..."
-#                #  git diff --exit-code --no-ext-diff -p || (git status && exit 1)
-#                - |
-#                  echo "Waiting for MySQL to boot..."
-#                  docker-compose -f tools/pabau1/docker-compose.ci.yml up &
-#                  echo "Launched"
-#                  yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || echo "Still waiting for boot..."
-#                  yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || echo "Still waiting for boot..."
-#                  yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || echo "Still waiting for boot..."
-#                  yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || (docker-compose -f tools/pabau1/docker-compose.ci.yml logs; exit 1)
-#                #- |
-#                #  echo "Performing load testing..."
-#                # yarn load-testing
+         - step:
+             name: integration tests
+             size: 4x
+             runs-on:
+               - 'self.hosted'
+             services:
+               - docker
+             script:
+               #                - while true; do ps -aux && sleep 30; done &
+               - |
+                 echo "Testing Hasura database is consistent with schema.graphql..."
+                 echo "============================================================"
+                 echo ""
+                 echo "Installing docker-compose..."
+                 curl -L https://github.com/docker/compose/releases/download/1.29.2/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
+                 chmod +x ~/docker-compose
+                 mv ~/docker-compose /usr/local/bin/docker-compose
+               - yarn bridge:start2 &
+               - |
+                 echo "Waiting for bridge-api to boot..."
+                 yarn wait-on -t 160000 -w 20000 http-get://localhost:4000
+               - |
+                 echo "Waiting for postgres to boot..."
+                 docker-compose -f hasura/docker-compose.ci.yml up -d postgres && yarn wait-on -t 60000 -d 12000 tcp:127.0.0.1:5432 || docker-compose -f hasura/docker-compose.ci.yml logs postgres
+               - |
+                 echo "Waiting for Hasura to boot..."
+                 docker-compose -f hasura/docker-compose.ci.yml up graphql-engine &
+                 echo "Launched"
+                 yarn wait-on -t 90000 -d 50000 http-get://127.0.0.1:8080/console || echo "Still waiting for boot..."
+                 yarn wait-on -t 60000 -d 10000 http-get://127.0.0.1:8080/console || echo "Still waiting for boot..."
+                 yarn wait-on -t 60000 -d 10000 http-get://127.0.0.1:8080/console || echo "Still waiting for boot..."
+                 yarn wait-on -t 60000 -d 10000 http-get://127.0.0.1:8080/console || (docker-compose -f hasura/docker-compose.ci.yml logs graphql-engine; exit 1)
+                 HASURA_GRAPHQL_ENDPOINT="http://localhost:8080" yarn hasura:wait
+               - |
+                 echo "Checking Metadata is consistent so far..."
+                 HASURA_GRAPHQL_ENDPOINT="http://localhost:8080" yarn hasura:cli metadata inconsistency status
+               - |
+                 echo "Exporting Hasura metadata..."
+                 HASURA_GRAPHQL_ENDPOINT="http://localhost:8080" yarn hasura:export
+               - |
+                 echo "Ensuring everything is identical..."
+               #  git diff --exit-code --no-ext-diff -p || (git status && exit 1)
+               - |
+                 echo "Waiting for MySQL to boot..."
+                 docker-compose -f tools/pabau1/docker-compose.ci.yml up &
+                 echo "Launched"
+                 yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || echo "Still waiting for boot..."
+                 yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || echo "Still waiting for boot..."
+                 yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || echo "Still waiting for boot..."
+                 yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || (docker-compose -f tools/pabau1/docker-compose.ci.yml logs; exit 1)
+               - |
+                echo "Performing load testing..."
+                yarn load-testing
       - step:
           name: bump version
           max-time: 5
+          runs-on:
+            - 'self.hosted'
           script:
             # Get an oauth access token using the client credentials, parsing out the token with jq.
             - git remote set-url origin "${BITBUCKET_GIT_SSH_ORIGIN}"
@@ -353,7 +381,7 @@ pipelines:
       - step:
           name: build
           max-time: 80
-          size: 8x
+          size: 4x
           runs-on:
             - 'self.hosted'
           script:
@@ -365,7 +393,9 @@ pipelines:
       - parallel:
           - step:
               name: deploy dockers
-              size: 2x
+              size: 4x
+              runs-on:
+                - 'self.hosted'
               deployment: production-dockers
               services:
                 - docker
@@ -416,6 +446,8 @@ pipelines:
       - step:
           name: announce to slack
           max-time: 25
+          runs-on:
+            - 'self.hosted'
           script:
             #            - while true; do ps -aux && sleep 30; done &
             - cat dist/bot_message2.txt || true
