--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -88,10 +88,10 @@ pipelines:
                   curl -L https://github.com/docker/compose/releases/download/1.29.2/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
                   chmod +x ~/docker-compose
                   mv ~/docker-compose /usr/local/bin/docker-compose
-                - yarn bridge:start2
+                - yarn bridge:start2 &
                 - |
                   echo "Waiting for bridge-api to boot..."
-                  yarn wait-on -t 160000 -w 20000 http-get://localhost:4000
+                  yarn wait-on -t 260000 -w 20000 http-get://localhost:4000
                 - |
                   echo "Waiting for postgres to boot..."
                   docker-compose -f hasura/docker-compose.ci.yml up -d postgres && yarn wait-on -t 60000 -d 12000 tcp:127.0.0.1:5432 || docker-compose -f hasura/docker-compose.ci.yml logs postgres
@@ -330,10 +330,10 @@ pipelines:
                   curl -L https://github.com/docker/compose/releases/download/1.29.2/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
                   chmod +x ~/docker-compose
                   mv ~/docker-compose /usr/local/bin/docker-compose
-                - yarn bridge:start2
+                - yarn bridge:start2 &
                 - |
                   echo "Waiting for bridge-api to boot..."
-                  yarn wait-on -t 160000 -w 20000 http-get://localhost:4000
+                  yarn wait-on -t 260000 -w 20000 http-get://localhost:4000
                 - |
                   echo "Waiting for postgres to boot..."
                   docker-compose -f hasura/docker-compose.ci.yml up -d postgres && yarn wait-on -t 60000 -d 12000 tcp:127.0.0.1:5432 || docker-compose -f hasura/docker-compose.ci.yml logs postgres
