Temporary Pipeline Structure

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -62,14 +62,14 @@ pipelines:
                 #                - while true; do ps -aux && sleep 30; done &
                 - yarn affected:lint --base=origin/master
 
-          - step:
-              name: unit tests
-              size: 4x
-              runs-on:
-                - 'self.hosted'
-              script:
-                #                - while true; do ps -aux && sleep 30; done &
-                - yarn affected:test --base=origin/master
+          # - step:
+          #     name: unit tests
+          #     size: 4x
+          #     runs-on:
+          #       - 'self.hosted'
+          #     script:
+          #       #                - while true; do ps -aux && sleep 30; done &
+          #       - yarn affected:test --base=origin/master
 
           - step:
               name: integration tests
@@ -121,9 +121,9 @@ pipelines:
                   yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || echo "Still waiting for boot..."
                   yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || echo "Still waiting for boot..."
                   yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || (docker-compose -f tools/pabau1/docker-compose.ci.yml logs; exit 1)
-                - |
-                  echo "Performing load testing..."
-                  yarn load-testing
+                # - |
+                #   echo "Performing load testing..."
+                #   yarn load-testing
           - step:
               name: e2e
               size: 4x
@@ -363,9 +363,9 @@ pipelines:
                   yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || echo "Still waiting for boot..."
                   yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || echo "Still waiting for boot..."
                   yarn wait-on -t 16000 -d 8000 tcp:localhost:3307 || (docker-compose -f tools/pabau1/docker-compose.ci.yml logs; exit 1)
-                - |
-                  echo "Performing load testing..."
-                  yarn load-testing
+                # - |
+                #   echo "Performing load testing..."
+                #   yarn load-testing
       - step:
           name: bump version
           max-time: 5
