--- a/apps/bridge-api/.env
+++ b/apps/bridge-api/.env
@@ -39,3 +39,9 @@ WEBINAR_JAM_API_KEY=
 JWT_PAB1_TOKEN=kjsddsbsdbgkhsnldskhmdflkhlgj
 
 NODE_OPTIONS=--max_old_space_size=16384
+
+#google client ID
+GOOGLE_CLIENT_ID=1006619281478-0ggfmclia2856fnes3640qn7rhq1f2u9.apps.googleusercontent.com
+
+#google client scerate
+GOOGLE_CLIENT_SECRET=IfyIxOV4e-OW_CU3KTgUFk4n
