--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -62,14 +62,14 @@ pipelines:
                 #                - while true; do ps -aux && sleep 30; done &
                 - yarn affected:lint --base=origin/master
 
-          # - step:
-          #     name: unit tests
-          #     size: 4x
-          #     runs-on:
-          #       - 'self.hosted'
-          #     script:
-          #       #                - while true; do ps -aux && sleep 30; done &
-          #       - yarn affected:test --base=origin/master
+          - step:
+              name: unit tests
+              size: 4x
+              runs-on:
+                - 'self.hosted'
+              script:
+                #                - while true; do ps -aux && sleep 30; done &
+                - yarn affected:test --base=origin/master
 
           - step:
               name: integration tests
@@ -106,7 +106,7 @@ pipelines:
                   HASURA_GRAPHQL_ENDPOINT="http://localhost:8080" yarn hasura:wait
                 # - |
                 #   echo "Checking Metadata is consistent so far..."
-                #   HASURA_GRAPHQL_ENDPOINT="http://localhost:8080" yarn hasura:cli metadata inconsistency status
+                #   HASURA_GRAPHQL_ENDPOINT="http://localhost:8080" yarn hasura\li metadata inconsistency status
                 - |
                   echo "Exporting Hasura metadata..."
                   HASURA_GRAPHQL_ENDPOINT="http://localhost:8080" yarn hasura:export
@@ -292,14 +292,14 @@ pipelines:
                 #                - while true; do ps -aux && sleep 30; done &
                 - yarn affected:lint --base=HEAD~1
 
-          # - step:
-          #     name: unit tests
-          #     size: 8x
-          #     runs-on:
-          #       - 'self.hosted'
-          #     script:
-          #       #                - while true; do ps -aux && sleep 30; done &
-          #       - yarn affected:test --base=HEAD~1
+          - step:
+              name: unit tests
+              size: 4x
+              runs-on:
+                - 'self.hosted'
+              script:
+                #                - while true; do ps -aux && sleep 30; done &
+                - yarn affected:test --base=HEAD~1
 
           - step:
               name: e2e
