--- a/apps/bridge-api/.env
+++ b/apps/bridge-api/.env
@@ -27,3 +27,8 @@ WEBINAR_JAM_API_KEY=
 
 #legacy JWT secret
 JWT_PAB1_TOKEN=kjsddsbsdbgkhsnldskhmdflkhlgj
+
+# API key for send grid SMS service
+TEXTLOCAL_API_KEY=QvSIMgCvR9U-eNOm93rgwXA7eSENQz2jrXmb75tji3
+NEXMO_API_KEY=20412141
+NEXMO_API_SICRET=2b14499073e56d44
