--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "next": "11.1.2",
     "next-compose-plugins": "2.2.1",
     "next-images": "1.8.1",
+    "next-plugin-antd-less": "1.4.4",
     "next-plugin-yaml": "1.0.1",
     "next-with-less": "1.0.1",
     "nexus": "1.1.0",
