--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@nestjs/config": "1.0.1",
     "@nestjs/core": "8.0.6",
     "@nestjs/platform-express": "8.0.6",
+    "@next/bundle-analyzer": "12.0.2",
     "@paljs/cli": "3.8.3",
     "@paljs/nexus": "3.8.3",
     "@prisma/client": "2.29.1",
