--- a/package.json
+++ b/package.json
@@ -123,6 +123,8 @@
     "inflected": "2.1.0",
     "js-base64": "3.7.2",
     "jsonwebtoken": "8.5.1",
+    "less": "*",
+    "less-loader": ">= 7.0.0",
     "lodash": "4.17.21",
     "mammoth": "1.4.17",
     "mic-recorder-to-mp3": "2.2.2",
@@ -130,8 +132,8 @@
     "next": "11.1.2",
     "next-compose-plugins": "2.2.1",
     "next-images": "1.8.2",
+    "next-plugin-antd-less": "1.5.2",
     "next-plugin-yaml": "1.0.1",
-    "next-with-less": "2.0.2",
     "nexus": "1.1.0",
     "node-fetch": "2.6.1",
     "open-cli": "7.0.1",
@@ -189,6 +191,8 @@
     "stream": "0.0.2",
     "string-to-color": "2.2.2",
     "stripe": "8.179.0",
+    "stylelint-config-recommended": "6.0.0",
+    "stylelint-config-recommended-less": "1.0.1",
     "subscriptions-transport-ws": "0.9.19",
     "ts-node-dev": "1.1.8",
     "tslib": "2.3.1",
@@ -309,7 +313,7 @@
     "rimraf": "3.0.2",
     "run-script-os": "1.1.6",
     "shx": "0.3.3",
-    "stylelint": "13.13.1",
+    "stylelint": "14.0.1",
     "ts-jest": "27.0.3",
     "ts-node": "9.1.1",
     "typescript": "4.4.3",
