--- a/package.json
+++ b/package.json
@@ -132,7 +132,7 @@
     "next": "11.1.2",
     "next-compose-plugins": "2.2.1",
     "next-images": "1.8.2",
-    "next-plugin-antd-less": "1.5.2",
+    "next-with-less": "2.0.2",
     "next-plugin-yaml": "1.0.1",
     "nexus": "1.1.0",
     "node-fetch": "2.6.1",
