--- a/package.json
+++ b/package.json
@@ -67,6 +67,21 @@
     "load-testing": "ts-node tools/cicd/load-testing",
     "postinstall": "patch-package --patch-dir tools/patches && husky install && yarn graphql-codegen:cached || (yarn lint:graphql-inspector && exit 1)"
   },
+  "resolutions": {
+    "**/immer": ">=8.0.1",
+    "**/prismjs": ">=1.24.0",
+    "**/ssri": ">=8.0.1",
+    "**/hosted-git-info": ">=3.0.8",
+    "**/lodash": ">=4.17.21",
+    "**/underscore": ">=1.12.1",
+    "**/trim": ">=0.0.3",
+    "**/dns-packet": ">=5.2.2",
+    "**/css-what": ">=5.0.1",
+    "ts-node-dev/**/meow": ">=10.0.1",
+    "**/cssnano": ">=5.0.6",
+    "**/mini-css-extract-plugin": ">=1.6.0",
+    "eslint-plugin-graphql/**/graphql-config": "3.0.2"
+  },
   "dependencies": {
     "@anchan828/nest-sendgrid": "0.5.8",
     "@ant-design/icons": "4.6.4",
@@ -242,10 +257,10 @@
     "@nrwl/tao": "12.10.0",
     "@nrwl/web": "12.10.0",
     "@nrwl/workspace": "12.10.0",
-    "@storybook/addon-a11y": "6.3.10",
-    "@storybook/addon-essentials": "6.3.10",
-    "@storybook/addon-storysource": "6.3.10",
-    "@storybook/react": "6.3.10",
+    "@storybook/addon-a11y": "6.3.12",
+    "@storybook/addon-essentials": "6.3.12",
+    "@storybook/addon-storysource": "6.3.12",
+    "@storybook/react": "6.3.12",
     "@testing-library/react": "12.1.2",
     "@types/async-retry": "1.4.3",
     "@types/dotenv-flow": "3.2.0",
