--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "nx": "cross-env NODE_OPTIONS=\"--max-old-space-size=16384\" nx",
     "serve": "yarn nx serve",
     "build:bridge-api": "yarn nx export bridge-api",
-    "hasura:cli": "node --loader ts-node/esm tools/cli/hasura.ts",
-    "hasura:refresh-metadata": "yarn hasura:cli metadata inconsistency status || node --loader ts-node/esm tools/cli/hasura-refresh-metadata.ts",
-    "hasura:wait": "node --loader ts-node/esm tools/cli/hasura-wait.ts",
+    "hasura:cli": "ts-node tools/cli/hasura.ts",
+    "hasura:refresh-metadata": "yarn hasura:cli metadata inconsistency status || ts-node tools/cli/hasura-refresh-metadata.ts",
+    "hasura:wait": "ts-node tools/cli/hasura-wait.ts",
     "nest": "cd apps/backend && nest",
     "clean": "rimraf **/node_modules yarn.lock package-lock.json dist coverage",
     "web:start": "yarn nodemon -x \"yarn nx serve || shx touch apps/web/next.config.js\" -e '' -w 'apps/web/next.config.js'",
