--- a/apps/web/.env.production
+++ b/apps/web/.env.production
@@ -1,10 +1,12 @@
-
-NEXT_PUBLIC_GRAPHQL_ENDPOINT="http://localhost:8080/v1/graphql"
+# The "http" GraphQL endpoint
+NEXT_PUBLIC_GRAPHQL_ENDPOINT="https://api-v2.pabau.com/v1/graphql"
 
 # The "ws" GraphQL endpoint
-NEXT_PUBLIC_WS_ENDPOINT="ws://localhost:8080/v1/graphql"
+NEXT_PUBLIC_WS_ENDPOINT="wss://api-v2.pabau.com/v1/graphql"
 
-# Tell the frontend we are (not in) production mode
-NEXT_PUBLIC_PRODUCTION_MODE=0
+# Tell the frontend we are production mode
+NEXT_PUBLIC_PRODUCTION_MODE=1
 
 NEXT_PUBLIC_LEGACY_HASH_ENDPOINT = "https://crm.pabau.com/js/login/ajax/updateUserHash.php"
+
+SENTRY_DSN = "https://c7185e52dd3a43ceb066bb154572adda@o134884.ingest.sentry.io/298098"
