--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "jsonwebtoken": "8.5.1",
     "less": "*",
     "less-loader": ">= 7.0.0",
+    "less-vars-to-js": "1.3.0",
     "lodash": "4.17.21",
     "mammoth": "1.4.17",
     "mic-recorder-to-mp3": "2.2.2",
