--- a/package.json
+++ b/package.json
@@ -137,8 +137,9 @@
     "inflected": "2.1.0",
     "js-base64": "3.7.2",
     "jsonwebtoken": "8.5.1",
-    "less": "*",
-    "less-loader": ">= 7.0.0",
+    "less": "3.13.1",
+    "less-loader": "7.3.0",
+    "less-vars-to-js": "1.3.0",
     "lodash": "4.17.21",
     "mammoth": "1.4.17",
     "mic-recorder-to-mp3": "2.2.2",
@@ -221,6 +222,7 @@
     "@ardatan/fetch-event-source": "2.0.2",
     "@babel/core": "7.15.8",
     "@babel/plugin-proposal-private-property-in-object": "7.15.4",
+    "@babel/plugin-syntax-flow": "7.16.0",
     "@babel/plugin-transform-runtime": "7.15.8",
     "@babel/preset-env": "7.15.8",
     "@babel/preset-react": "7.14.5",
@@ -312,7 +314,6 @@
     "jest": "27.0.6",
     "jest-fail-on-console-reporter": "0.1.0",
     "jest-silent-reporter": "0.5.0",
-    "less-vars-to-js": "1.3.0",
     "lint-staged": "11.1.2",
     "micromatch": "4.0.4",
     "next-page-tester": "0.29.0",
